<?xml version="1.0"?>
 <package>
   <name>knowrob_mesh_reasoning</name>
  <version>0.1.0</version>
  <description>A package which provides mesh segmentation and semantic interpretation of cad models.</description>
  <maintainer email="tenorth@cs.uni-bremen.de">Moritz Tenorth</maintainer>
  <author>Stefan Profanter</author>
  
  <license>LGPL</license>
  <url type="website">http://ros.org/wiki/knowrob_cad_parser</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>knowrob_common</build_depend>

  <run_depend>knowrob_common</run_depend>

</package>
